--- a/基本有用的电子阅读指南 v0.2 beta4.md
+++ b/基本有用的电子阅读指南 v0.2 beta4.md
@@ -1,17 +1,8 @@
-# 基本有用的电子阅读指南
+# 说明基本有用的电子阅读指南
 
 ------
 
-​																																																											writing by momo5269
-
-
-
-## 说明基本有用的电子阅读指南
-
-------
-
-																																																											writing by momo5269
-
+writing by momo5269
 
 
 ## 说明
