--- a/v0.2 beta4 在线版 测试中.md
+++ b/v0.2 beta4 在线版 测试中.md
@@ -8,7 +8,7 @@ writing by momo5269
   * [速览](#%E9%80%9F%E8%A7%88)
   * [PDF](#pdf)
     * [阅读](#%E9%98%85%E8%AF%BB)
-      * [Acroba](#acrobat)
+      * [Acrobat](#acrobat)
       * [福昕阅读器](#%E7%A6%8F%E6%98%95%E9%98%85%E8%AF%BB%E5%99%A8)
       * [PDF\-XChange Viewer](#pdf-xchange-viewer)
       * [SumatraPDF](#sumatrapdf)
