--- a/v0.2 beta4.md
+++ b/v0.2 beta4.md
@@ -13,7 +13,7 @@ writing by momo5269
 
 [`署名-非商业性使用-相同方式共享`](http://creativecommons.net.cn/licenses/licenses_exp/)	
 
-[`长期更新地址`](https://www.lanzous.com/b597086)
+[`长期更新地址`](https://www.lanzous.com/b597086)	[Github](https://github.com/momo5269/Maybe-useful-Reader-Guide)
 
 
 
