Update v0.2 beta4 在线版 测试中.md

--- a/v0.2 beta4 在线版 测试中.md
+++ b/v0.2 beta4 在线版 测试中.md
@@ -80,7 +80,7 @@ writing by momo5269
 
 ## 说明
 
-旨在介绍各类阅读软件供大家选择，PC / 安卓为主。点击导向官网或下载，没有的百度也有结果（安卓可能要翻墙）
+旨在介绍各类阅读软件供大家选择，PC / 安卓为主。点击导向官网或下载，安卓可能要翻墙。
 
 本文使用[`Typora`](https://www.typora.io/)  生成，建议用其阅读和输出文件，推荐[VUE](http://theme.typora.io/theme/Vue/)主题
 
@@ -88,16 +88,16 @@ writing by momo5269
 
 [`署名-非商业性使用-相同方式共享`](http://creativecommons.net.cn/licenses/licenses_exp/)	
 
-[`长期更新地址`](https://www.lanzous.com/b597086)
+[`长期更新地址`](https://www.lanzous.com/b597086)	[Github](https://github.com/momo5269/Maybe-useful-Reader-Guide)
 
 
 
 ```
-0.2 重点说明
-  1.不再提供HTML与PDF，带侧栏的HTML输出请详见附件。本文代码块部分需自行调整；
-  2.部分链接更新为蓝奏云，加入大量不稳定链接。失效请见谅。但有名字基本搜得到；
-  3.开始包含少量破解链接，推荐购买正版，亦有免费替代方案；
-  4.附件转为蓝奏云提供，含Typora。
+0.2 更新说明
+  1.不再提供.MD以外格式，侧栏HTML输出详见附件。代码块分割等排版问题需自行调整；
+  2.本文链接高达628个，非官网可能不稳定，失效请见谅。但有名字基本搜得到；
+  3.开始包含少量破解链接，仅供试用：推荐购买正版，亦有免费替代方案；
+  4.附件转为蓝奏云/Github提供，含Typora。
   5.新章节：实用工具
 ```
 
@@ -139,29 +139,6 @@ writing by momo5269
 
 漫画	[PerfectViewer](https://soft.shouji.com.cn/down/21244.html)	[CDisplay](https://play.google.com/store/apps/details?id=com.progdigy.cdisplay.free)
 
-
-完整版详见文件
-
-旨在介绍各类阅读软件供大家选择，PC / 安卓为主。点击导向官网或下载，没有的百度也有结果（安卓可能要翻墙）
-
-本文使用[`Typora`](https://www.typora.io/)  生成，建议用其阅读和输出文件，推荐[VUE](http://theme.typora.io/theme/Vue/)主题
-
-
-
-[`署名-非商业性使用-相同方式共享`](http://creativecommons.net.cn/licenses/licenses_exp/)	
-
-[`长期更新地址`](https://www.lanzous.com/b597086)
-
-
-
-```
-0.2 重点说明
-  1.不再提供HTML与PDF，带侧栏的HTML输出请详见附件。本文代码块部分需自行调整；
-  2.部分链接更新为蓝奏云，加入大量不稳定链接。失效请见谅。但有名字基本搜得到；
-  3.开始包含少量破解链接，推荐购买正版，亦有免费替代方案；
-  4.附件转为蓝奏云提供，含Typora。
-  5.新章节：实用工具
-```
 
  
 
@@ -586,11 +563,11 @@ $$
 
 ------
 
-`FreePic2Pdf` 300DPI 或 图像扫描DPI  
+`FreePic2Pdf` **300DPI** 或 图像扫描DPI，双层PDF请参考下节。
 
-​		此处可调整软件打开时的布局、页面大小和点书签后页面缩放，通常默认即可。图很小又不想优化时放大，96DPI可能不错。
+​		此处可调整文件打开时的布局、页面大小和点书签后页面缩放，通常默认即可。
 
-​		若对标移动设备的分辨率，可参考[ChainLP](http://no722.cocolog-nifty.com/blog/)软件的`解像度` 
+​		图很小又不想优化时放大，96DPI可能不错。若对标移动设备的分辨率，可参考[ChainLP](http://no722.cocolog-nifty.com/blog/)软件的`解像度` 
 
 
 
@@ -640,7 +617,9 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
   - [PandaOCR](https://www.52pojie.cn/thread-919023-1-1.html)  等截图OCR软件，详见实用工具一章
 - PDG或繁体竖排：`高版本UnicornViewer`/[ABBYY 12/14](https://masuit.com/misc/5) + 手工校对
 - EPUB  or  Word ： [ABBYY 12/14](https://masuit.com/misc/5)（手动指定OCR语言不要≥4，请选自动）
+- 未避免误导，“PDF直接扫描”指的是不导出图片，直接对PDF文件进行OCR。
 
+  而上文流程优化后的图片，输出时用MODI可能更好，效率更高，精准也有所保障。
 
 
 #### 书签
@@ -669,10 +648,11 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
   - 正则，比如`[.+?]+`替换`空白`来删除标题页码间的圆点。（或直接替换为Tab空格）
   - [`PDF补丁丁`](http://pdfpatcher.cnblogs.com/)有OCR目录页转为书签的特色功能。
 
+
 ```
 1.正则表达式语法、使用可参考《正则表达式必知必会》
 2.之前由于个人习惯了EmEditor，并未发现PdgCntEditor的正则保存，实是疏忽，万分抱歉。
-3.原推荐EmEditor 步骤为OCR→文本编辑→PDF拖入PdgCntEditor→复制入文本、移动栏位→保存，写的不如这行清楚，容易理解出错。
+3.原推荐EmEditor 步骤为OCR→文本编辑→PDF拖入PdgCntEditor→复制入文本、移动栏位→保存，不如现在清楚，容易理解错。
 ```
 
 
@@ -1509,7 +1489,7 @@ ROSTCM6
 
 
 
-[下载地址](https://www.lanzous.com/b706726/)	 **密码**	`7pmx`
+[蓝奏云](https://www.lanzous.com/b706726/)	**密码**`7pmx`	or [Github](https://github.com/momo5269/Maybe-useful-Reader-Guide/tree/master/attachments) 
 
 
 
@@ -1606,3 +1586,20 @@ Firefox导出的Html书签，直接打开即可。
 其实可以看出来无论是图书还是漫画（其实还有电影），正确的文件名格式很重要，但为什么搜索不是关键呢？
 
 因为通过命名逻辑可以反推出发布源和集散地。
+
+
+
+
+### 附记
+
+​			本文最早源自给朋友写的小简介，还是聊天时说的，存了TXT。但后来总需要上传文件、TXT也不易看到重点，于是丢进Word、挂上网盘链接、加了点颜色就成了所谓《扫描版图书优化指南》……还发在了论坛。虽然难看，但毕竟只是有限人看。
+
+​			测试了几个版本后，又遇上总问“该用什么打开文件”、“怎么转PDF”等更基础问题的同学……就开始着手写阅读器简介。开始每类说明最多一行……可完善时又想到，单单PDF选择也很多…应尽力介绍各种情况下的阅读器。再加上其他格式，写起来就长了，索性和优化指南合并——也就是本指南的初版。
+
+​			本来觉得初版内容足够。吃饭时一想，阅读过程遇到生僻字、异体字怎么办？再说名字起这么大，也该尽力介绍吧？于是加上了词典翻译、看图截图，甚至还有字幕！再后来还有免费字体、搜索指南什么的，可能用上就写上了…虽然文献管理自觉没能力写好便放弃了。
+
+​			目前版本仍有很多问题：用专用样式排版、全文太长、介绍比较简略、优化指南文字生硬并存在大量歧义等等……但碍于本人第一次用Markdown写作……能力有限，没有较大更新不再变动。
+
+​			最后，为本文可能带来的的误导表示由衷的歉意。
+
+​                                                                                                                                                 momo5269  2019-05-05
