Update v0.2 beta4 在线版 测试中.md

--- a/v0.2 beta4 在线版 测试中.md
+++ b/v0.2 beta4 在线版 测试中.md
@@ -671,7 +671,7 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 ​		若需感谢来源，通常写在创建者。有时不知是谁就留空了，至少我不敢写自己的。若来自超星，也只有比较好找的无所谓。
 
-​		我改meta是因为处理后等于新版本，收尾加个也不碍事。同时方便使用filemeta管理的同学检索。这种事情，若非花费大量时间的确不需要标注防偷…见过才会这样做。虽然遇上人家也改meta也没任何办法（以前尾页右下角文本框写入也不一定有用）
+​		我改meta是因为处理后等于新版本，收尾加个也不碍事。同时方便使用filemeta管理的同学检索。这种事情，若非花费大量时间的确不需要标注防偷…真有。用老马的软件生成双层PDF时一般`制作程序`不作变动。
 
 ​		顺便提下，常共享电子书，最好不要随便做标记、批注等会变更文件MD5的操作，以免不能秒传。文件小网络好是无所谓，但也添麻烦，如版本重复。  
 
