--- a/版本历史.md
+++ b/版本历史.md
@@ -1,6 +1,13 @@
 # 版本历史
 
 
+  * [测试版](#%E6%B5%8B%E8%AF%95%E7%89%88)
+    * [v0\.1](#v01)
+    * [v0\.2 beta](#v02-beta)
+    * [V0\.2 beta3](#v02-beta3)
+    * [V0\.2 beta4](#v02-beta4)
+    * [V0\.2 beta5](#v02-beta5)
+    * [V0\.2 Fianl 准备清单](#v02-fianl-%E5%87%86%E5%A4%87%E6%B8%85%E5%8D%95)
 
 
 
