Update 基本有用的电子阅读指南 v0.2 Final.md

--- a/基本有用的电子阅读指南 v0.2 Final.md
+++ b/基本有用的电子阅读指南 v0.2 Final.md
@@ -1089,7 +1089,7 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 
 
-[平典](https://www.pdawiki.com/forum/forum.php?mod=viewthread&tid=30675)	掌上百科网友开发，借鉴深蓝词典，支持mdx。但部分机型/系统选词可能无法查询已索引词典。
+[平典](https://www.pdawiki.com/forum/forum.php?mod=viewthread&tid=30675)	掌上百科网友开发，借鉴深蓝词典，支持mdx。部分机型/系统可能存在兼容问题。
 
 [GoldenDict](https://sourceforge.net/projects/goldendict/files/)	不支持mdx，未注册限制5个词典，1.6.5破解需ROOT+Lucky Patcher，2.0仍有小毛病，不推荐。
 
