Update and rename 基本有用的电子阅读指南 v0.2 Final.md to 基本有用的电子阅读指南 v0.2 F-190614.md

--- a/基本有用的电子阅读指南 v0.2 F-190614.md
+++ b/基本有用的电子阅读指南 v0.2 F-190614.md
@@ -19,11 +19,10 @@ writing by momo5269
 
 ```
 0.2 更新说明
-  1.不再提供.MD以外格式，侧栏HTML输出详见附件。代码块分割等排版问题需自行调整；
-  2.本文链接近800个，非官网可能不稳定，失效请见谅。但有名字基本搜得到；
-  3.开始包含少量破解链接，仅供试用：推荐购买正版，亦有免费替代方案；
-  4.附件转为蓝奏云/Github提供，含Typora。
-  5.新章节：实用工具
+  1.新章节：实用工具、附录；
+  2.附件转为蓝奏云/Github提供，含Typora；
+  3.本文包含少量破解链接，仅供试用：推荐购买正版，亦有免费替代方案；
+  4.本文链接近800个，非官网可能不稳定，失效请见谅。但有名字基本搜得到。
 ```
 
  
@@ -38,13 +37,13 @@ writing by momo5269
 
 > 漫画	[HoneyView](http://www.bandisoft.com/honeyview/)	[ComicsViewer](http://www.cnblogs.com/stronghorse/)
 
-### Android
+### Android  
 
 > 图书	[Adobe Reader](https://www.coolapk.com/apk/com.adobe.reader)	[KOreader](https://github.com/koreader/koreader/wiki/KOReader%E7%BB%B4%E5%9F%BA)	[静读天下](https://www.coolapk.com/apk/com.flyersoft.moonreaderp)	[閑讀書Pdg](https://www.lanzous.com/i3zqnkh)
 
-> 漫画	[ComicScreen](https://play.google.com/store/apps/details?id=com.viewer.comicscreen)	[ComicRack](https://play.google.com/store/apps/details?id=com.cyo.comicrack.viewer.free)
+> 漫画	[ComicScreen](https://play.google.com/store/apps/details?id=com.viewer.comicscreen)	
 
-
+[酷安应用集](https://www.coolapk.com/album/12176502)
 
 ### 补充
 
@@ -58,11 +57,11 @@ writing by momo5269
 
 漫画	[ComicRack](http://comicrack.cyolito.com/)	[CDisplayEx](http://www.cdisplayex.com/)	[MangaMeeya](http://soft.onlinedown.net/soft/1150480.htm)
 
-**安卓**
+**安卓** 
 
 图书	[Kindle](https://www.amazon.cn/gp/digital/fiona/kcp-landing-page/)	[CAJViewer](http://cajviewer.cnki.net/)	[Librera](https://librera.mobi/)	[阅读](https://www.coolapk.com/apk/com.gedoor.monkeybook)	[阿帕比阅读器](http://www.apabi.cn/download/)
 
-漫画	[PerfectViewer](https://soft.shouji.com.cn/down/21244.html)	[CDisplay](https://play.google.com/store/apps/details?id=com.progdigy.cdisplay.free)
+漫画	[PerfectViewer](https://soft.shouji.com.cn/down/21244.html)	[CDisplay](https://play.google.com/store/apps/details?id=com.progdigy.cdisplay.free)	 [ComicRack](https://play.google.com/store/apps/details?id=com.cyo.comicrack.viewer.free)
 
 
 
@@ -593,33 +592,50 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 ​		任意OCR软件连同
 
-​		`PdgCntEditor`  编辑制作书签，导入导出（有时用到`FreePic2Pdf`）
+​		`PdgCntEditor`  编辑制作书签，导入导出（下称`PCE`）
 
 ​		`PDF-XChange Viewer` 复制粘贴保存书签、制作详细定位书签（此类需[PDF补丁丁](http://pdfpatcher.cnblogs.com)导出xml）
 
 
 
-​		原有书签，[PDF-XChange Viewer](https://www.tracker-software.com/product/pdf-xchange-viewer)复制粘贴即可，`PdgCntEditor`/`FreePic2Pdf`导出导入亦可。
+​		原有书签，[PDF-XChange Viewer](https://www.tracker-software.com/product/pdf-xchange-viewer)复制粘贴即可，`PCE`/`FreePic2Pdf`导出导入亦可。
 
 ​		自制书签，分为手工录入定位和OCR目录编辑。
 
+
+
 - 手工	
+  
   - 在当前页直接新建书签、编辑文本即可。建议用`PDF-XChange Viewer`
   - 页面定位的阅读布局为`单页`，详细定位阅读布局为`连续`（实际位置为可视部分顶部）
-
+  
+  
+  
 - OCR目录编辑
   - OCR，`ABBYY PDFT+`稍等直接复制…方法很多请自行选择 。
-  - 编辑，`PdgCntEditor`拥有所需全部功能，且可保存正则调用。建议直接拖入文件，用其编辑保存书签。
+  - 编辑，`PCE`拥有所需全部功能，且可保存正则调用。建议直接拖入文件，用其编辑保存书签。
   - 正则，比如`[.+?]+`替换`空白`来删除标题页码间的圆点。（或直接替换为Tab空格）
   - [`PDF补丁丁`](http://pdfpatcher.cnblogs.com/)有OCR目录页转为书签的特色功能。
 
-```
-1.正则表达式语法、使用可参考《正则表达式必知必会》
-2.之前由于个人习惯了EmEditor，并未发现PdgCntEditor的正则保存，实是疏忽，万分抱歉。
-3.原推荐EmEditor 步骤为OCR→文本编辑→PDF拖入PdgCntEditor→复制入文本、移动栏位→保存，不如现在清楚，容易理解错。
-```
 
 
+- 正则表达式
+  
+  - 语法使用可参考[正则表达式必知必会](https://pan.baidu.com/s/1155jC2Jbe3qEt2wUz5o43g)
+  
+  - 简单介绍删除空格后划分章节可用的正则，“替换为”的空格加号为示意：
+  
+    - 右移生成子母关系，根据章节情况决定Tab空格数量，用点/顿号的请举一反三
+  
+      正则：`第([一二三四五六七八九十百零〇]+|[0-9]+)章`	 替换为：`Tab空格+第$1章`
+  
+    - 章节文字后加入空格（我喜欢用全角空格，搜索高亮容易区分）
+  
+      正则：`第([一二三四五六七八九十百零〇]+|[0-9]+)([编章节])`	替换为：`第$1$2+空格`
+  
+  - 若需替换后检查，可用`EmEditor`等支持搜索全部+结果高亮的编辑器。正则检查`PCE`自带。
+  
+  - 之前习惯EmEditor，并未发现PdgCntEditor的正则保存，实是疏忽，万分抱歉。
 
 
 
@@ -1868,7 +1884,7 @@ ROSTCM6
 
 
 
-### 附件简要说明
+### 附件简要
 
 
 
@@ -1979,6 +1995,38 @@ Firefox导出的Html书签，直接打开即可。
 因为通过命名逻辑可以反推出发布源和集散地。
 
 
+
+
+
+### 链接失效说明
+
+更新日期：2019.06.11 
+
+吾爱破解此次自查后失效链接如下（按前后顺序），由于非主要能百度到，暂不更新补充。
+
+SCITranslate10 VIP
+
+Librera
+
+EverEdit
+
+Sublime Text
+
+MaxView
+
+MysticThumbs
+
+Batch Inpaint
+
+Bandicam3
+
+屏幕录像专家 2019
+
+OmniPage19
+
+Mathlab图形计算器（安卓）
+
+PDF Watermark Revmoer
 
 
 
