--- a/v0.2F-online.md
+++ b/v0.2F-online.md
@@ -85,8 +85,6 @@
 
 ### 补充
 
-------
-
 **PC**
 
 图书　[Acrobat](https://pan.baidu.com/s/1MhHNS1ixn5ijj1hwWh4PGQ) ([Pitstop](https://www.jb51.net/softs/624889.html)+[Quite Imposing](http://www.cnprint.org/bbs/thread/77/285247/))　[ABBYY PDF Transformer+](https://www.52pojie.cn/thread-831415-1-1.html)　[QuickLook](https://github.com/QL-Win/QuickLook)
@@ -110,8 +108,6 @@
 
 
 ### 阅读
-
-------
 
 　　考虑到各种类型大小的打开/浏览速度、文本复制、书签批注，基本编辑等功能。
 
@@ -248,8 +244,6 @@
 
 ### 功能
 
-------
-
 　　通常包括：页面处理、内容编辑、体积优化、文本识别、导入导出、分割合并、书签批注、信息处理、水印加密等等，配合插件还可以满足各类印前需求。但个人需求不多，又以简单绿色为目标，因此适用范围有限。　
 
 　　本章节链接可能非官网。
@@ -358,8 +352,6 @@
 
 ### 其他
 
-------
-
 　　未介绍的软件，包括阅读器与编辑器，点击名称进入官网即可获取。
 
 
@@ -386,8 +378,6 @@
 
 
 ### 扫描版优化
-
-------
 
 　　新手可使用[Acrobat](https://weibo.com/1112829033/HmK2Vadko)的`优化体积`、[ABBYY](https://masuit.com/misc/5)的`减少文件大小`或[PDF-XChange Editor](https://www.repaik.com/forum.php?mod=viewthread&tid=344250)的`另存为优化副本`。
 
@@ -736,8 +726,6 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 ### 部分下载
 
-------
-
 > [PDF](https://pan.baidu.com/s/1Ft3Y1QWoh38Q2G-gXlrZMg)　[Acrobat](https://pan.baidu.com/s/1MhHNS1ixn5ijj1hwWh4PGQ)　[eBook](https://pan.baidu.com/s/1mdUUOZV9Zma3PNkAKwnrNQ)　[Office](https://pan.baidu.com/s/1ytJP5XoimsvFiN3D73k-FA)　[PhotoShop](https://pan.baidu.com/s/1pZRf_KxOjlQo9K0zuvuHcg)
 >
 > [老马的原创空间](https://www.cnblogs.com/stronghorse/p/4913182.html)　[超星](https://pan.baidu.com/s/1Tt_j9s1yRhb2rTuZICyeMA)　[实用电脑印前技术](http://www.cnprint.org/bbs/showthread.php?p=2460641)　[正则表达式必知必会](https://pan.baidu.com/s/1155jC2Jbe3qEt2wUz5o43g)
@@ -857,9 +845,7 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 
 
-#### AZW / AZW3
-
-------
+### AZW / AZW3
 
 　　即亚马逊专属格式　PC：[Calibre](https://calibre-ebook.com/)　安卓：[厚墨](https://www.coolapk.com/apk/cn.deepink.reader)　[静读天下 5+](http://www.moondownload.com/chinese.html)
 
@@ -1023,15 +1009,11 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 ### Markdown
 
-------
-
 　　即.md文件，[`Typora`](https://www.typora.io/)　[VSCode](https://code.visualstudio.com/)　[CuteMarkEd](http://cloose.github.io/CuteMarkEd/)　[小书匠](http://soft.xiaoshujiang.com/)　[QuickLook](https://github.com/QL-Win/QuickLook)（仅浏览，日常够用）**安卓** [Epsilon Notes](https://play.google.com/store/apps/details?id=com.ekartoyev.enotes)
 
 
 
 ### TeX
-
-------
 
 　　即TeX源代码文件，[`TeXworks`](http://www.tug.org/texworks/)[TexStudio](http://texstudio.sourceforge.net/) [WinEdt](http://www.winedt.com/download.html)([注册码](https://www.52pojie.cn/thread-595351-1-1.html)) 无需求可任意文本编辑器。
 
@@ -1053,8 +1035,6 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 ### PostScript
 
-------
-
 
 
 
@@ -1063,8 +1043,6 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 ### Office
 
-------
-
 　　[OpenOffice](https://www.openoffice.org/)　[LibreOffice](https://zh-cn.libreoffice.org/)　[WPS](https://www.wps.cn/)　[SoftMaker](https://www.freeoffice.com/zh/)　Office By xb21cn　Office 2007 SP3 PE 3in1 　HxS可用[H2Viewer](https://www.jb51.net/softs/124308.html)
 
 　　插件：[EasyCharts](http://easychart.github.io/post/Easycharts/)　[Excel催化剂](https://www.jianshu.com/u/1d0e4a6e400e)　[方方格子](http://www.ffcell.com/home/products.aspx)　[iSlide](https://www.islide.cc/)
@@ -1072,8 +1050,6 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 
 ### CHM
-
-------
 
 　　即.chm文件，已编译的帮助文件（Compiled Help Manual）win下直接运行即可，移动端需要阅读器
 
@@ -1085,23 +1061,17 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 ### CAJ/NH
 
-------
-
 　　即知网专属格式，[`CAJViewer`](http://cajviewer.cnki.net/)
 
 
 
 ### NFO
 
-------
-
 　　即.nfo文件，[`DAMN NFO Viewer`](https://www.jb51.net/softs/546945.html)
 
 
 
 ### 数据库
-
-------
 
 　　[`Database.NET`](https://fishcodelib.com/Database.htm)　
 
@@ -1118,8 +1088,6 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 
 ### 词典翻译
-
-------
 
 　　各平台和在线词典有很多，此处主要推荐繁体/生僻/异体字查询、轻便的客户端，木有MAC和某些著名跨平台软件。亦不提供插图等输入方案（可以百度）和罗塞塔石碑等学习软件。另外，异体字多需要语境参考，水平不及，不便深入。
 
@@ -1213,8 +1181,6 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 ### 文本编辑
 
-------
-
 纯拉清单，排名不分先后。包含代码支持，但不含`十六进制`/`代码整理`/`编程辅助`相关工具。绝不可能推荐[`Emacs`](http://www.gnu.org/software/emacs/)！
 
 目前也不含写作软件……
@@ -1228,8 +1194,6 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 
 ### 字体
-
-------
 
 　　　主要介绍免费与免费可商用字体，链接内多有授权介绍。
 
@@ -1333,8 +1297,6 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 ### 看图
 
-------
-
 > [`HoneyView`](http://www.bandisoft.com/honeyview/)　上文CBR/CBZ已提到过，综合表现优异，推荐默认。
 
 
@@ -1437,8 +1399,6 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 ### 截图
 
-------
-
 > 截图　[FastStoneCapture](http://blog.sina.com.cn/s/blog_89a729a40102wjwk.html)　贴图　[Snipaste](https://zh.snipaste.com/)
 
 
@@ -1472,8 +1432,6 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 
 ### OCR
-
-------
 
 　　常用请参考扫描书优化，其实也就是ABBYY和MODI……
 
@@ -1576,8 +1534,6 @@ Linux：[OCRFeeder](https://wiki.gnome.org/action/show/Apps/OCRFeeder?action=sho
 
 ### 字幕
 
-------
-
 　　虽然播放器的选择大家都知道……文章也极多，但还是简单说下。下载可参考：[VideoHelp](https://www.videohelp.com/)　[Codecs.com](https://www.free-codecs.com/)
 
 　　*我原是介绍Reader的，怎么变成Player了……*
@@ -1608,7 +1564,7 @@ Linux：[OCRFeeder](https://wiki.gnome.org/action/show/Apps/OCRFeeder?action=sho
 
 **字幕编辑**
 
-　　　因为面向初学者，最多是修订小错，只简单介绍几个常用工具：
+　　因为面向初学者，最多是修订小错，只简单介绍几个常用工具：
 
 [mkvtoolnix](https://mkvtoolnix.download/)+[gMKVExtractGUI](https://sourceforge.net/projects/gmkvextractgui/)　MKV工具及其导出程序的GUI，用来提取字幕。
 
@@ -1620,17 +1576,15 @@ Linux：[OCRFeeder](https://wiki.gnome.org/action/show/Apps/OCRFeeder?action=sho
 
 
 
-　　　什么，想把`idx`/`sub`/`sup`转换成文本字幕？
+　　什么，想把`idx`/`sub`/`sup`转换成文本字幕？
 
-　　　[`IdxSubOcr`](https://www.cnblogs.com/stronghorse/p/4913470.html) 老马出品的OCR转`SRT`软件。　　[BDSup2Sub](https://www.videohelp.com/software/BDSup2Sub)功能如名。
+　　[`IdxSubOcr`](https://www.cnblogs.com/stronghorse/p/4913470.html) 老马出品的OCR转`SRT`软件。　　[BDSup2Sub](https://www.videohelp.com/software/BDSup2Sub)功能如名。
 
 
 
 
 
 ### 其他
-
-------
 
 **搜索工具**　[`Everthing`](https://www.voidtools.com/zh-cn/) / [Listary](https://www.listary.com/)　 [`FileLocator`](https://www.jb51.net/softs/558967.html) / [docfetcher](http://docfetcher.sourceforge.net/en/index.html)
 
@@ -1682,8 +1636,6 @@ Linux：[OCRFeeder](https://wiki.gnome.org/action/show/Apps/OCRFeeder?action=sho
 
 ### 文献管理
 
-------
-
 　　通常院校会购买机构授权，如[EndNote](https://www.endnote.com/)、[NoteExpress](http://www.inoteexpress.com/aegean/)，下载亦不难找。由于大家需求多样、差异较大，本人经验有限，因此仅提供软件列举和部分简要说明。类似的知识管理软件如[印象笔记](https://www.yinxiang.com/)、[为知笔记](http://www.wiz.cn/)因长期不再使用，无法推荐。
 
 
@@ -1714,8 +1666,6 @@ RefWorks　Qnotero　Papers2
 
 ### 数学工具
 
-------
-
 [FreeMat](http://freemat.sourceforge.net/)　Mathematics　OriginPro
 
 [Isabelle](http://isabelle.in.tum.de/)　[MathType](http://sleepace.cn/masuit/soft/tree/master/MathType%E7%89%88%E6%9C%AC%E5%A4%A7%E5%85%A8)　
@@ -1729,8 +1679,6 @@ RefWorks　Qnotero　Papers2
 
 
 ### 质性分析
-
-------
 
 **网站**　[语料库在线](http://corpus.zhonghuayuwen.org/)（有语料工具）　[语料库语言学在线](https://www.corpus4u.org/)　[语言云](https://www.ltp-cloud.com/)
 
@@ -1761,8 +1709,6 @@ ROSTCM6　
 
 
 ### PDF去水印
-
-------
 
 　　因为水印的情况较多，无插图、表达差、说明复杂，请见谅。简单操作可以直接看PitStop。
 
@@ -1827,8 +1773,6 @@ ROSTCM6　
 
 ### 对开拍照书
 
-------
-
 **基本流程**：`去边`/`对切`→`去灰度阴影`→`纠斜`→`去边`→`居中对齐`
 
 1. 对切前，边缘有较大黑边/色块、图片均大致相同容易去除，可批量裁剪去边。反之则对切后去边
@@ -1859,8 +1803,6 @@ ROSTCM6　
 
 
 ### 搜索概要
-
-------
 
 　　由于不可避免地导致盗版，本文**点到为止**，详细参考打包文件内可能附带的Firefox书签或doc。
 
