Update 基本有用的电子阅读指南 v0.2 F-190615.md

--- a/基本有用的电子阅读指南 v0.2 F-190615.md
+++ b/基本有用的电子阅读指南 v0.2 F-190615.md
@@ -229,12 +229,12 @@ writing by momo5269
 
 
 
-#### 多功能
+### 多功能
 
 ------
 
 　　各类简单轻巧的绿色工具，加粗为长。仅为列举，排名不分先后。优选将在**扫描版优化**中举出。
-　　
+
 | 名称                                                         | 功能                                                         |
 | ------------------------------------------------------------ | ------------------------------------------------------------ |
 | [`PDF补丁丁`](http://pdfpatcher.cnblogs.com/)                | **书签/信息编辑**、**导出图片**、**图片转PDF**、分割合并、字库嵌入、结构分析、**OCR目录生成书签** |
@@ -820,7 +820,7 @@ ABBYY PDFT+嵌入文本不会对图片进行任何处理，综合性能较高。
 
 
 
-#### AZW / AZW3
+### AZW / AZW3
 
 ------
 
@@ -1597,7 +1597,7 @@ Linux：[OCRFeeder](https://wiki.gnome.org/action/show/Apps/OCRFeeder?action=sho
 
 **搜索工具**　[`Everthing`](https://www.voidtools.com/zh-cn/) / [Listary](https://www.listary.com/)　 [`FileLocator`](https://www.jb51.net/softs/558967.html) / [docfetcher](http://docfetcher.sourceforge.net/en/index.html)
 
-**重　命　名**　[`ReNamer`](https://www.52pojie.cn/thread-840043-1-1.html)  [`Advanced Renamer`](https://www.52pojie.cn/thread-791060-1-1.html) / [拖把更名器](https://dl.pconline.com.cn/html_2/1/68/id=5709&pn=0.html)　[Ant Renamer](http://www.antp.be/software/renamer)　[深蓝批量重命名](http://www.onlinedown.net/soft/977246.htm)　[U2字幕重命名工具](http://bbs.vcb-s.com/thread-1658-1-1.html)
+**重命名**　　[`ReNamer`](https://www.52pojie.cn/thread-840043-1-1.html)  [`Advanced Renamer`](https://www.52pojie.cn/thread-791060-1-1.html) / [拖把更名器](https://dl.pconline.com.cn/html_2/1/68/id=5709&pn=0.html)　[Ant Renamer](http://www.antp.be/software/renamer)　[深蓝批量重命名](http://www.onlinedown.net/soft/977246.htm)　[U2字幕重命名工具](http://bbs.vcb-s.com/thread-1658-1-1.html)
 
 **文件列表**　[`文件列表生成器`](http://www.skycn.com/soft/appid/31425.html)　[`Directory Lister`](http://www.dayanzai.me/lister-pro.html)
 
@@ -1609,7 +1609,7 @@ Linux：[OCRFeeder](https://wiki.gnome.org/action/show/Apps/OCRFeeder?action=sho
 
 **快捷启动**　[`Wox`](http://www.wox.one/)　[`Lily`](https://www.52pojie.cn/thread-818034-1-1.html)　[`Rolan`](https://getrolan.com/)（推荐[旧版本](http://www.carrotchou.blog/777.html)）[Launchy](http://www.launchy.net/)　[uTools](https://u.tools/)　[RunAny](https://github.com/hui-Zz/RunAny)　[nTrun](https://www.laomoit.com/ntrun.html)　[RunZ](https://github.com/goreliu/runz)
 
-**网页脚本**　[`Greasy Fork`](https://greasyfork.org/zh-CN)（含管理器介绍）[AC-baidu](https://greasyfork.org/zh-CN/scripts/14178)　[Picviewer CE+](https://greasyfork.org/zh-CN/scripts/24204-picviewer-ce)　[限制解除](https://greasyfork.org/zh-CN/scripts/28497)　[搜索快捷跳转](https://greasyfork.org/zh-CN/scripts/27752)　[网盘自动填写密码](https://greasyfork.org/zh-CN/scripts/29762)　
+**网页脚本**　[`Greasy Fork`](https://greasyfork.org/zh-CN)（含指南）[AC-baidu](https://greasyfork.org/zh-CN/scripts/14178)　[Picviewer CE+](https://greasyfork.org/zh-CN/scripts/24204-picviewer-ce)　[限制解除](https://greasyfork.org/zh-CN/scripts/28497)　[搜索快捷跳转](https://greasyfork.org/zh-CN/scripts/27752)　[网盘自动填写密码](https://greasyfork.org/zh-CN/scripts/29762)
 
 同类软件非常多，因此仅列举个人常用（过）的……有需求可自行百度类别尝试，脚本则直接在Greasy Fork搜寻。
 
@@ -1651,11 +1651,17 @@ Linux：[OCRFeeder](https://wiki.gnome.org/action/show/Apps/OCRFeeder?action=sho
 
 
 
-[`Zotero`](https://www.zotero.org/)　开源工具，功能全面。支持插件、网页保存/导入（如豆瓣、维基、谷歌学术）、各类附件、文献可视化等，[中文简介](https://www.zotero.org/support/zh/quick_start_guide)
+[`Zotero`](https://www.zotero.org/)
 
-[`EndNote`](https://www.endnote.com/)　最常用的管理软件，一些专业有顶级课题组的库可以订阅。常从[丁香园](http://www.dxy.cn/bbs/board/10/2905)获取汉化，[落尘之木 X9 CHS Patch](https://www.luochenzhimu.com/archives/4055.html)。
+　　开源工具，功能全面。支持插件、网页保存/导入（如豆瓣、维基、谷歌学术）、附件、文献可视化等，[中文简介](https://www.zotero.org/support/zh/quick_start_guide)。
 
-[`NoteExpress`](http://www.inoteexpress.com/aegean/)　特色是层级管理与本地文件夹同步
+[`EndNote`](https://www.endnote.com/)
+
+　　最常用的管理软件。部分专业有顶级课题组的库可以订阅。常从[丁香园](http://www.dxy.cn/bbs/board/10/2905)获取汉化，[落尘之木 X9 CHS Patch](https://www.luochenzhimu.com/archives/4055.html)。
+
+[`NoteExpress`](http://www.inoteexpress.com/aegean/)　
+
+　　国产软件，特色是层级管理与本地文件夹同步。但智能更新题录一般，常要手动模糊搜索更新。
 
 
 
@@ -1827,7 +1833,7 @@ ROSTCM6　
 
 　　由于不可避免地导致盗版，本文**点到为止**，详细参考打包文件内可能附带的Firefox书签或doc。
 
-　　基本常识：`书名` + `作者`/ `出版社` / `年代` 等多种关键词组合搜索，因重名和引擎问题，可能单纯书名无结果。
+　　基本常识：`书名` + `作者`/ `出版社` / `年代` 等多关键词多次搜索，因重名和引擎问题，可能单纯书名无结果。
 
 
 
